--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,14 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+    <color name="green_700">#00c853</color>
+    <color name="green_dark">#0CD33C</color>
+    <color name="green_light">#5efc82</color>
+    <color name="blue_700">#00b8d4</color>
+    <color name="blue_dark">#0088a3</color>
+    <color name="blue_light">#62ebff</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="silver">#eeeeee</color>
 </resources>
