--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
     android:label="Farmasi"
-    app:startDestination="@id/controlBookFragment">
+    app:startDestination="@id/pharmacyFragment">
 
     <fragment
         android:id="@+id/controlBookFragment"
