--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -14,11 +14,16 @@
     <fragment
         android:id="@+id/pharmacyFragment"
         android:name="com.example.prbassistant.PharmacyFragment"
-        android:label="Farmasi"
+        android:label="Resep Obat"
         tools:layout="@layout/fragment_pharmacy" />
     <fragment
         android:id="@+id/medicineReminderFragment3"
         android:name="com.example.prbassistant.MedicineReminderFragment"
         android:label="Pengingat Obat"
         tools:layout="@layout/fragment_medicine_reminder" />
+    <fragment
+        android:id="@+id/pharmacyListFragment"
+        android:name="com.example.prbassistant.PharmacyListFragment"
+        android:label="fragment_pharmacy_list"
+        tools:layout="@layout/fragment_pharmacy_list" />
 </navigation>
