--- a/app/src/main/res/layout/fragment_pharmacy_list.xml
+++ b/app/src/main/res/layout/fragment_pharmacy_list.xml
@@ -27,15 +27,29 @@
                 app:layout_constraintStart_toStartOf="parent"
                 tools:listitem="@layout/item_row_pharmacy" />
 
-            <Button
-                android:id="@+id/btn_claim"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:text="Claim"
+                android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rv_pharmacy" />
+                app:layout_constraintTop_toBottomOf="@id/rv_pharmacy" >
+
+                <Button
+                    android:id="@+id/btn_cancel_claim"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="Batal"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
+
+                <Button
+                    android:id="@+id/btn_claim"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="Claim"/>
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
