--- a/app/src/main/res/layout/item_row_pharmacy.xml
+++ b/app/src/main/res/layout/item_row_pharmacy.xml
@@ -7,8 +7,10 @@
     android:paddingHorizontal="16dp">
 
     <RelativeLayout
+        android:id="@+id/layout_selected_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
