refactor ui folder

--- a/app/src/main/res/layout/fragment_control_book.xml
+++ b/app/src/main/res/layout/fragment_control_book.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/silver"
-    tools:context=".ControlBookFragment">
+    tools:context=".ui.bookcontrol.ControlBookFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/section_bookcontrol_profile"
