--- a/app/src/main/res/layout/activity_pharmacy.xml
+++ b/app/src/main/res/layout/activity_pharmacy.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PharmacyActivity">
+    tools:context=".ui.pharmacy.PharmacyActivity">
 
     <fragment
         android:id="@+id/fragmentPharmacy"
