--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -19,17 +19,28 @@
         android:id="@+id/pharmacyFragment"
         android:name="com.example.prbassistant.ui.pharmacy.PharmacyFragment"
         android:label="Resep Obat"
-        tools:layout="@layout/fragment_pharmacy" />
+        tools:layout="@layout/fragment_pharmacy" >
+        <action
+            android:id="@+id/action_pharmacyFragment_to_pharmacyListFragment"
+            app:destination="@id/pharmacyListFragment" />
+    </fragment>
     <fragment
         android:id="@+id/medicineReminderFragment3"
-        android:name="com.example.prbassistant.MedicineReminderFragment"
+        android:name="com.example.prbassistant.ui.pharmacyreminder.MedicineReminderFragment"
         android:label="Pengingat Obat"
         tools:layout="@layout/fragment_medicine_reminder" />
     <fragment
         android:id="@+id/pharmacyListFragment"
         android:name="com.example.prbassistant.ui.pharmacy.PharmacyListFragment"
         android:label="fragment_pharmacy_list"
-        tools:layout="@layout/fragment_pharmacy_list" />
+        tools:layout="@layout/fragment_pharmacy_list" >
+        <action
+            android:id="@+id/action_pharmacyListFragment_to_pharmacyFragment"
+            app:destination="@id/pharmacyFragment" />
+        <action
+            android:id="@+id/action_pharmacyListFragment_to_claimSuccessFragment2"
+            app:destination="@id/claimSuccessFragment2" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.prbassistant.ui.bookcontrol.ProfileFragment"
@@ -41,5 +52,18 @@
         <action
             android:id="@+id/action_profileFragment_to_controlBookFragment"
             app:destination="@id/controlBookFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/claimSuccessFragment2"
+        android:name="com.example.prbassistant.ui.pharmacy.ClaimSuccessFragment"
+        android:label="fragment_claim_success"
+        tools:layout="@layout/fragment_claim_success" >
+        <argument
+            android:name="currentPharmacy"
+            app:argType="com.example.prbassistant.model.Pharmacy" />
+        <argument
+            android:name="id_receipt"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 </navigation>
