--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -32,14 +32,17 @@
     <fragment
         android:id="@+id/pharmacyListFragment"
         android:name="com.example.prbassistant.ui.pharmacy.PharmacyListFragment"
-        android:label="fragment_pharmacy_list"
-        tools:layout="@layout/fragment_pharmacy_list" >
+        android:label="Pilih Spotek"
+        tools:layout="@layout/fragment_pharmacy_list">
         <action
             android:id="@+id/action_pharmacyListFragment_to_pharmacyFragment"
             app:destination="@id/pharmacyFragment" />
         <action
             android:id="@+id/action_pharmacyListFragment_to_claimSuccessFragment2"
-            app:destination="@id/claimSuccessFragment2" />
+            app:destination="@id/claimSuccessFragment" />
+        <argument
+            android:name="idReceipt"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
@@ -54,10 +57,10 @@
             app:destination="@id/controlBookFragment" />
     </fragment>
     <fragment
-        android:id="@+id/claimSuccessFragment2"
+        android:id="@+id/claimSuccessFragment"
         android:name="com.example.prbassistant.ui.pharmacy.ClaimSuccessFragment"
-        android:label="fragment_claim_success"
-        tools:layout="@layout/fragment_claim_success" >
+        android:label="Claim Sukses"
+        tools:layout="@layout/fragment_claim_success">
         <argument
             android:name="currentPharmacy"
             app:argType="com.example.prbassistant.model.Pharmacy" />
@@ -65,5 +68,8 @@
             android:name="id_receipt"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_claimSuccessFragment_to_pharmacyFragment"
+            app:destination="@id/pharmacyFragment" />
     </fragment>
 </navigation>
