--- a/app/src/main/res/layout/fragment_medicine_reminder.xml
+++ b/app/src/main/res/layout/fragment_medicine_reminder.xml
@@ -6,14 +6,52 @@
     android:layout_height="match_parent"
     tools:context=".ui.pharmacyreminder.MedicineReminderFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pengingat Obat"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/img_reminder"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:src="@drawable/ic_pharmacy_reminder"/>
+
+        <TextView
+            android:id="@+id/text_id_ket"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Belum Ada Pengingat"
+            android:layout_below="@+id/img_reminder"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:textColor="@color/green_700"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/text_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_id_ket"
+            android:layout_marginTop="16dp"
+            android:text="Catat obat dan dosisnya, kami akan kirimkan \npengingat agar tidak terlewat"
+            android:textAlignment="center"/>
+
+
+        <Button
+            android:id="@+id/btn_add_new_reminder"
+            app:icon="@drawable/ic_add_alert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_desc"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:text="Tambah Pengingat"/>
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
