--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -79,6 +79,22 @@
     <fragment
         android:id="@+id/addMedicineFragment"
         android:name="com.example.prbassistant.ui.pharmacyreminder.AddMedicineFragment"
-        android:label="fragment_add_medicine"
-        tools:layout="@layout/fragment_add_medicine" />
+        android:label="Tambah Pengingat"
+        tools:layout="@layout/fragment_add_medicine" >
+        <action
+            android:id="@+id/action_addMedicineFragment_to_setReminderOnceDayFragment"
+            app:destination="@id/setReminderOnceDayFragment" />
+        <argument
+            android:name="countOnceDay"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/setReminderOnceDayFragment"
+        android:name="com.example.prbassistant.ui.pharmacyreminder.SetReminderOnceDayFragment"
+        android:label="Tentukan Repetisi"
+        tools:layout="@layout/fragment_set_reminder_once_day">
+        <action
+            android:id="@+id/action_setReminderOnceDayFragment_to_addMedicineFragment"
+            app:destination="@id/addMedicineFragment" />
+    </fragment>
 </navigation>
