fix medicine reminder feature

--- a/app/src/main/res/layout/fragment_add_medicine.xml
+++ b/app/src/main/res/layout/fragment_add_medicine.xml
@@ -31,6 +31,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edt_medicine_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -174,7 +175,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/section_reminder_medicine_day"
                 android:layout_margin="16dp"
-                android:text="Simpan"/>
+                android:text="Simpan Pengingat"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
