--- a/app/src/main/res/layout/fragment_medicine_reminder.xml
+++ b/app/src/main/res/layout/fragment_medicine_reminder.xml
@@ -4,54 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingVertical="16dp"
+    android:background="@color/silver"
     tools:context=".ui.pharmacyreminder.MedicineReminderFragment">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_reminder"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/img_reminder"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:src="@drawable/ic_pharmacy_reminder"/>
-
-        <TextView
-            android:id="@+id/text_id_ket"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Belum Ada Pengingat"
-            android:layout_below="@+id/img_reminder"
-            android:layout_centerHorizontal="true"
-            android:textAlignment="center"
-            android:textColor="@color/green_700"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/text_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/text_id_ket"
-            android:layout_marginTop="16dp"
-            android:text="Catat obat dan dosisnya, kami akan kirimkan \npengingat agar tidak terlewat"
-            android:textAlignment="center"/>
-
-
-        <Button
-            android:id="@+id/btn_add_new_reminder"
-            app:icon="@drawable/ic_add_alert"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/text_desc"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
-            android:text="Tambah Pengingat"/>
-    </RelativeLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        tools:listitem="@layout/item_row_reminder" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
