--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -32,6 +32,20 @@
         <action
             android:id="@+id/action_medicineReminderFragment3_to_addMedicineFragment"
             app:destination="@id/addMedicineFragment" />
+        <argument
+            android:name="medicineReminder"
+            app:argType="com.example.prbassistant.model.MedicineReminder"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
+    <fragment
+        android:id="@+id/medicineReminderFragment"
+        android:name="com.example.prbassistant.ui.pharmacyreminder.MedicineReminderFragment"
+        android:label="Pengingat Obat"
+        tools:layout="@layout/fragment_medicine_reminder">
+        <action
+            android:id="@+id/action_medicineReminderFragment3_to_addMedicineFragment"
+            app:destination="@id/addMedicineFragment" />
     </fragment>
     <fragment
         android:id="@+id/pharmacyListFragment"
@@ -87,6 +101,9 @@
         <argument
             android:name="countOnceDay"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_addMedicineFragment_to_medicineReminderFragment3"
+            app:destination="@id/medicineReminderFragment3" />
     </fragment>
     <fragment
         android:id="@+id/setReminderOnceDayFragment"
