--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="silver">#eeeeee</color>
     <color name="abu_abu">#9e9e9e</color>
+    <color name="yellow">#FFEB3B</color>
 </resources>
